fix angsgromes issue in tutorial

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "source": [
     "## Download the tutorial dataset\n",
-    "We apply DeepDeWedge to the Wiener-Filter CTF corrected FBP reconstructon of tilt series 05 of EMPIAR-10045. First, we download the tutorial dataset which contains FBP reconstructions from the even, odd and full tilt series. We binned these reconstructions by a factor of 6 using average pooling, which results in a physical voxel size of 13.02 $\\AA$. For CTF correction, we used the Wiener-like filter implemented in IsoNet (https://github.com/IsoNet-cryoET/IsoNet).\n",
+    "We apply DeepDeWedge to the Wiener-Filter CTF corrected FBP reconstructon of tilt series 05 of EMPIAR-10045. First, we download the tutorial dataset which contains FBP reconstructions from the even, odd and full tilt series. We binned these reconstructions by a factor of 6 using average pooling, which results in a physical voxel size of 13.02 Angstroms. For CTF correction, we used the Wiener-like filter implemented in IsoNet (https://github.com/IsoNet-cryoET/IsoNet).\n",
     "\n",
     "The following two lines of code download the data as .zip archive and unzip it. Upon successful completion, you will find a new subdirectory \n"
    ]
@@ -317,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.15"
   },
   "orig_nbformat": 4,
   "vscode": {
