switch to default instancenorm

--- a/tutorial/Step2:ModelFitting.ipynb
+++ b/tutorial/Step2:ModelFitting.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,61 +30,16 @@
     "\n",
     "To fit a model on the tutorial data, we use the `fit-model` command of the `ddw` package. Sometimes, the commandline output is not properly displayed in Jupyter notebooks, so you might want to run the command in the next cell in the commandline rather than here.\n",
     "\n",
-    "**Note:** Depending on your hardware, the model fitting process initiated in the following cell will take substantial time to complete. On our system with a single NVIDI L40 GPU (46068 MiB memory), 252 GB RAM, and an AMD EPYC 9334 CPU with 128 logical cores, model fitting takes TODO hours when using a batch size of 5 and TODO CPU workers for data loading."
+    "**Note:** Depending on your hardware, the model fitting process initiated in the following cell will take substantial time to complete. On our system with a single NVIDIA L40 GPU (46068 MiB memory), 252 GB RAM, and an AMD EPYC 9334 CPU with 128 logical cores, model fitting takes TODO hours when using a batch size of 5 and TODO CPU workers for data loading."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Global seed set to 42\n",
-      "GPU available: True (cuda), used: True\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n",
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0,1,2,3]\n",
-      "/opt/conda/envs/ddw_env/lib/python3.10/site-packages/torch/nn/modules/conv.py:605: UserWarning: Applied workaround for CuDNN issue, install nvrtc.so (Triggered internally at /opt/conda/conda-bld/pytorch_1704987280714/work/aten/src/ATen/native/cudnn/Conv_v8.cpp:80.)\n",
-      "  return F.conv3d(\n",
-      "/opt/conda/envs/ddw_env/lib/python3.10/site-packages/pytorch_lightning/utilities/data.py:85: UserWarning: Trying to infer the `batch_size` from an ambiguous collection. The batch size we found is 5. To avoid any miscalculations, use `self.log(..., batch_size=batch_size)`.\n",
-      "  warning_cache.warn(\n",
-      "/opt/conda/envs/ddw_env/lib/python3.10/site-packages/pytorch_lightning/utilities/data.py:85: UserWarning: Trying to infer the `batch_size` from an ambiguous collection. The batch size we found is 4. To avoid any miscalculations, use `self.log(..., batch_size=batch_size)`.\n",
-      "  warning_cache.warn(\n",
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0,1,2,3]\n",
-      "\n",
-      "  | Name | Type   | Params\n",
-      "--------------------------------\n",
-      "0 | unet | Unet3D | 27.3 M\n",
-      "--------------------------------\n",
-      "27.3 M    Trainable params\n",
-      "2         Non-trainable params\n",
-      "27.3 M    Total params\n",
-      "109.311   Total estimated model params size (MB)\n",
-      "/opt/conda/envs/ddw_env/lib/python3.10/site-packages/pytorch_lightning/trainer/trainer.py:1555: PossibleUserWarning: The number of training batches (20) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n",
-      "  rank_zero_warn(\n",
-      "\n",
-      "Computing model-input normalization statistics:   0%|          | 0/20 [00:00<?, ?it/s]\u001b[A\n",
-      "Computing model-input normalization statistics:   5%|▌         | 1/20 [00:07<02:13,  7.02s/it]\u001b[A\n",
-      "Computing model-input normalization statistics:  10%|█         | 2/20 [00:07<00:53,  2.97s/it]\u001b[A\n",
-      "Computing model-input normalization statistics:  15%|█▌        | 3/20 [00:07<00:28,  1.67s/it]\u001b[A\n",
-      "Computing model-input normalization statistics:  25%|██▌       | 5/20 [00:07<00:11,  1.32it/s]\u001b[A\n",
-      "Computing model-input normalization statistics:  50%|█████     | 10/20 [00:07<00:02,  3.76it/s]\u001b[A\n",
-      "Computing model-input normalization statistics:  65%|██████▌   | 13/20 [00:13<00:06,  1.09it/s]\u001b[A\n",
-      "Computing model-input normalization statistics: 100%|██████████| 20/20 [00:14<00:00,  1.43it/s]\u001b[A\n",
-      "/opt/conda/envs/ddw_env/lib/python3.10/site-packages/pytorch_lightning/utilities/data.py:85: UserWarning: Trying to infer the `batch_size` from an ambiguous collection. The batch size we found is 1. To avoid any miscalculations, use `self.log(..., batch_size=batch_size)`.\n",
-      "  warning_cache.warn(\n",
-      "Epoch 0, global step 20: 'fitting_loss' reached 3.09619 (best 3.09619), saving model to 'tutorial_project/logs/version_1/checkpoints/fitting_loss/epoch=0-fitting_loss=3.09619.ckpt' as top 5\n",
-      "`Trainer.fit` stopped: `max_epochs=1` reached.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!conda run -n ddw_env ddw fit-model --config ./config.yaml"
+    "!conda run --no-capture-output -n ddw_env ddw fit-model --config ./config.yaml"
    ]
   },
   {
@@ -229,7 +184,7 @@
     "- `num_downsample_layers`: Number of downsampling layers in the U-Net. After each downsampling layer, the number of feature channels is doubled.\n",
     "- `drop_prob`: Dropout probability in the U-Net, we recommend setting this to 0.0 unless you observe overfitting.\n",
     "\n",
-    "To adjust the model complexity, we recommend tuning the `chans` parameter. A higher value will increase the number of parameters in the model, but also the time consumption of model fitting. A lower value will decrease the number of parameters, but allows faster model fitting."
+    "To adjust the model complexity, we recommend changing the `chans` parameter. A higher value will increase the number of parameters in the model, but also the time consumption of model fitting. A lower value will decrease the number of parameters, but allows faster fitting."
    ]
   }
  ],
