--- a/tutorial/Step3:TomogramRefinement.ipynb
+++ b/tutorial/Step3:TomogramRefinement.ipynb
@@ -52,7 +52,7 @@
     }
    ],
    "source": [
-    "!conda run -n ddw_env ddw refine-tomogram --config ./config.yaml"
+    "!conda run --no-capture-output -n ddw_env ddw refine-tomogram --config ./config.yaml"
    ]
   },
   {
@@ -145,48 +145,6 @@
     "\n",
     "**Note:** In general, using the checkpoint at the latest epoch should be OK, but trying out the checkpoints with the lowest fitting and validation losses may lead to better results. So far, we have not seen significant differences between the different checkpoints in our tests."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## A Note on Normalization\n",
-    "\n",
-    "To improve performance and stability of DeepDeWedge, we normalize the full FBP reconstructions with the mean and variance of the model input sub-tomograms during model fitting.\n",
-    "\n",
-    "Even though we progressively fill in the missing wedges of the model input sub-tomograms $\\{{\\color{red}\\tilde{\\mathbf{v}}^0_{\\color{white}i}}\\}_{i=1}^N$ during model fitting, we found that the mean and especially the variance of these model inputs  is not necessarily the same as the mean and variance of the FBP reconstructions which have only the original missing wedge. To ensure that the data during tomogram refinement is in the same range as the data during model fitting, we re-normalize the full FBP reconstruction with the mean and variance calculated from model input sub-tomograms during model fitting, i.e.\n",
-    "\n",
-    "$$\n",
-    "    \\mu = \\frac{1}{N}\\sum_{i=1}^N \\text{mean}\\big({\\color{red}\\tilde{\\mathbf{v}}^0_{\\color{white}i}}\\big), \n",
-    "    \\quad \\sigma^2 = \\frac{1}{N}\\sum_{i=1}^N \\text{var}\\big({\\color{red}\\tilde{\\mathbf{v}}^0_{\\color{white}i}}\\big)\n",
-    "$$,\n",
-    "\n",
-    "Normalizing the sub-tomograms rather than the full FBP reconstructions during refinement led to tiling artifacts in the final tomograms.\n",
-    "\n",
-    "\n",
-    "\n",
-    "If you apply DeepDeWedge to a set of tomograms rather than a single one, the mean and variance of the individual tomograms may vary. For this case, we added an option to re-compute model-input statistics for each tomogram individually:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ARGUMENT 'recompute_normalization'\n",
-      "\tREQUIRED: False\n",
-      "\tDEFAULT: True\n",
-      "\tHELP: Whether to recompute the normalization values applied to the input tomograms. If `False`, the mean and variance of model inputs calculated during model fitting will be used. If `True`, the average model input mean and variance will be computed for each tomogram individually. We recommend setting this to to `True`. If you apply a model to a tomogram that was not used for model fitting or if the means and variances of the tomograms during model fitting are considerably different, recomputing the normalization is expected to be very beneficial for tomogram refinement.\n"
-     ]
-    }
-   ],
-   "source": [
-    "print_help_for_function_arguments(refine_tomogram, [\"recompute_normalization\"])"
-   ]
   }
  ],
  "metadata": {
@@ -205,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.8.15"
   },
   "orig_nbformat": 4,
   "vscode": {
