update download link in tutorial

--- a/tutorial/Step0:DataDownload.ipynb
+++ b/tutorial/Step0:DataDownload.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,14 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# download data with wget\n",
-    "!wget https://figshare.com/ndownloader/files/44184638?private_link=5a5e8c76eb5d7430d379 -O tutorial_data.zip\n",
-    "!unzip tutorial_data.zip\n",
-    "!rm tutorial_data.zip"
+    "!wget https://figshare.com/ndownloader/files/45582309\\?private_link\\=5a5e8c76eb5d7430d379 -O tutorial_data.zip\n",
+    "!unzip tutorial_data.zip"
    ]
   },
   {
