small cosmetics in documentation and tutorial

--- a/tutorial/Step3:TomogramRefinement.ipynb
+++ b/tutorial/Step3:TomogramRefinement.ipynb
@@ -26,7 +26,17 @@
     "\n",
     "## Refining the Tutorial Data\n",
     "\n",
-    "The `ddw refine-tomogram` produces the final denoised and missing-wedge-corrected tomogram(s) using the model we fitted in Step 2. The following command uses a model checkpoint contained in the tutorial data. If you want to use your own checkpoint, change the `model_checkpoint_file` parameter in the `config.yaml` file accordingly."
+    "The `ddw refine-tomogram` produces the final denoised and missing-wedge-corrected tomogram(s) using a model checkpoint produced during model fitting. You can determine which checkpoint to use by setting the `model_checkpoint_file` parameter in the `config.yaml` file. You can find checkpoint files (`.ckpt` extension) in `./tutorial_project/logs/version_0/checkpoints`. This directory contains three sub-directories:\n",
+    "\n",
+    "- `epoch/`: Checkpoints periodically created after a fixed number of epochs\n",
+    "- `fitting_loss/`: Checkpoints created when the model achieved lowest fitting losses \n",
+    "- `val_loss/`: Checkpoints created when the model achieved the lowest validation losses\n",
+    "\n",
+    "The frequnency and criteria for the creation of these checkpoints are arguments of `ddw fit-model`; see the output of `ddw fit-model --help` for details.  \n",
+    "\n",
+    "Provided that there was no overfitting, the checkpoint corresponding to the highest epoch should give good results, but you can also try the ones with the lowest validation or fitting losses.\n",
+    "\n",
+    "The following command uses a model checkpoint contained in `./tutorial_data` which was fitted by us. If you want to use a checkpoint from your own `ddw fit-model` run, change the `model_checkpoint_file` to, e.g., `./tutorial_project/logs/version_0/checkpoints/epoch/epoch=999.ckpt`."
    ]
   },
   {
@@ -141,10 +151,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Model checkpoints can be found in the logging directory used during `ddw fit-model`, which is typically `{project_dir}/logs`. In this concrete case, the `tutorial_project/logs` directory contains model checkpoints for various epochs, as well as those achieving the lowest validation and fitting losses. The frequency and number of checkpoints created is controlled by arguments during model fitting, see `ddw fit-model --help` for more information. \n",
-    "\n",
-    "**Note:** In general, using the checkpoint at the latest epoch is a good choice, but trying out the checkpoints with the lowest fitting and validation losses may lead to better results."
+    "Model checkpoints can be found in the logging directory used during `ddw fit-model`, which is typically `{project_dir}/logs`. In this concrete case, the `tutorial_project/logs` directory contains model checkpoints for various epochs, as well as those achieving the lowest validation and fitting losses. The frequency and number of checkpoints created is controlled by arguments during model fitting, see `ddw fit-model --help` for more information. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
