Change download instructions in tutorial

--- a/tutorial/Step0:DataDownload.ipynb
+++ b/tutorial/Step0:DataDownload.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "# download data with wget\n",
-    "!wget https://figshare.com/ndownloader/files/45582309\\?private_link\\=5a5e8c76eb5d7430d379 -O tutorial_data.zip\n",
+    "!curl -L -o tutorial_data.zip "https://api.figshare.com/v2/file/download/45582309"\n",
     "!unzip tutorial_data.zip"
    ]
   },
