Fix bug in tutorial notebook

--- a/tutorial/Step0:DataDownload.ipynb
+++ b/tutorial/Step0:DataDownload.ipynb
@@ -25,15 +25,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# download data with wget\n",
-    "!curl -L -o tutorial_data.zip "https://api.figshare.com/v2/file/download/45582309"\n",
-    "!unzip tutorial_data.zip"
-   ]
+  "cell_type": "code",
+  "execution_count": 9,
+  "metadata": {},
+  "outputs": [],
+  "source": [
+    "# download data with curl\n",
+    "!curl -L -o tutorial_data.zip \"https://api.figshare.com/v2/file/download/45582309\"\n",
+    "!unzip tutorial_data.zip\n"
+  ]
   },
   {
    "cell_type": "markdown",
